--- a/app/components/scss/main.scss
+++ b/app/components/scss/main.scss
@@ -326,11 +326,11 @@ p {
     .footer-col {
         float:left;
         min-height:1px;
-        padding: 15px 15px 0px 15px;
+        padding: 8px 5px 0px 5px;
         width: 33.33%;
 
-        @include mini {
-            padding: 8px 5px 0px 5px;
+        @include tablet {
+            padding: 15px 15px 0px 15px;
         }
     }
 
